--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,34 +1,74 @@
 header{
     background: #920e0e;
     background-size: auto;
+    color: white;
+    text-align: center;
+    padding: 20px;
 }
+
 body{
     background-color: #404040;
     margin: 0%;
 }
-#languages{
-    background-color:whitesmoke;
-    color: black;
-}
-#languages ul{
-    padding: 0%;
-    margin: 0%;
-    list-style: none;
+.navbar{
+    overflow: hidden;
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-#languages li{
-    display: inline;
-    padding: 5px 10px;
-}
-
-#languages li:hover{
-    background: #aaa;
-}
-
-#languages a{
-    color: black;
+.navbar a{
+    float: left;
+    font-size: 16px;
+    color: #aaa;
+    text-align: center; 
+    padding: 14px 16px;
     text-decoration: none;
-    font-size: 18px;
+}
+.dropdown{
+    float: left;
+    overflow: hidden;
+}
+.dropdown .dropbtn{
+    cursor: pointer;
+    font-size: 16px;
+    border: none;
+    color: #aaa;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus{
+    background-color: red;
+}
+.dropcontent{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0,.2);
+    z-index: 1;
+}
+
+.dropcontent a{
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+}
+
+.dropcontent a:hover{
+    background-color: #ddd;
+}
+
+.show{
+    display: block;
+}
+
+hr{
+    overflow: hidden;
 }
 
 h1{
@@ -36,12 +76,20 @@ h1{
     width: 90%;
     margin: auto;
     overflow: hidden;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .info{
     color: aqua;
     width: 85%;
     margin: auto;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-indent: 0.3in;
+}
+
+#footer{
+    background: #920e0e;
+    color: white;
+    text-align: center;
+    padding: 20px; 
+    margin-top: auto;
 }
