--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,30 +1,71 @@
+:root {
+    --primary-color: #0a3d62;
+    --secondary-color: #416fa5;
+    --text-color: #f9f9f9;
+    --card-color: #333;
+    --hover-color: #04263e;
+  }
+  
+  .light-theme {
+    --primary-color: #787878;
+    --secondary-color: #87ceeb;
+    --text-color: #333333;
+    --card-color: #ffffff;
+    --hover-color: #add8e6;;
+  }
+  
+  .purple-theme {
+    --primary-color: #9c27b0;
+    --secondary-color: #ce93d8;
+    --text-color: #f2f2f2;
+    --card-color: #7b1fa2;
+    --hover-color: #6a1b9a;
+  }
+  
+  .armour-theme{
+    --primary-color: #5ac3b0;
+    --secondary-color: #f7cd46;
+    --text-color: #de5935;
+    --card-color: white;
+    --hover-color: #de5935;
+  }
+
+  .simpatico-theme {
+    --primary-color: #1a2238;
+    --secondary-color: #ff6a3d;
+    --text-color: #f9f9f9;
+    --card-color: #cfb451; /* #9daaf2;*/
+    --hover-color:#9daaf2; /* You can choose an appropriate hover color */;
+  }
+
 header{
-    background: #0a3d62;
+    background: var(--primary-color);
     background-size: auto;
-    color: #f9f9f9;
+    color: var(--text-color);
     text-align: center;
     padding: 20px;
 }
 
 body{
-    background-color: #0a3d62;
+    background-color: var(--primary-color);
     margin: auto;
 }
 
 .navbar{
     overflow: hidden;
-    background-color: #4a6fa5;
+    background-color: var(--secondary-color);
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar a{
     float: left;
     font-size: 16px;
-    color: #f9f9f9;
+    color: var(--text-color);
     text-align: center; 
     padding: 14px 16px;
     text-decoration: none;
 }
+
 .dropdown{
     float: left;
     overflow: hidden;
@@ -33,14 +74,14 @@ body{
     cursor: pointer;
     font-size: 16px;
     border: none;
-    color: #f9f9f9;
+    color: var(--text-color);
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
 }
 .navbar a:hover, .dropdown:hover .dropbtn{
-    background-color: #04263e;
+    background-color: var(--hover-color);
 }
 .dropcontent{
     display: none;
@@ -53,15 +94,11 @@ body{
 
 .dropcontent a{
     float: none;
-    color: #4a6fa5;
+    color: var(--secondary-color);
     padding: 12px 16px;
     text-decoration: underline;
     display: block;
     text-align: center;
-}
-
-.dropcontent a:hover{
-    background-color: #f9f9f9;
 }
 
 .dropdown:hover .dropcontent{
@@ -73,7 +110,7 @@ body{
     cursor: pointer;
     font-size: 16px;
     border: none;
-    color: #f9f9f9;
+    color: var(--text-color);
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
@@ -81,7 +118,7 @@ body{
 }
 
 #theme-switch:hover{
-    background-color: #04263e;
+    background-color: var(--hover-color);
 }
 
 hr{
@@ -89,7 +126,7 @@ hr{
 }
 
 .subjects{
-    color:#f9f9f9;
+    color: var(--text-color);
     width: 92%;
     text-decoration: underline;
     margin: auto;
@@ -98,7 +135,7 @@ hr{
 }
 
 .info{
-    color: #f9f9f9;
+    color: var(--text-color);
     width: 90%;
     margin-top: 6px;
     margin-left: 28px;
@@ -107,16 +144,15 @@ hr{
 }
 
 #footer{
-    background: #4a6fa5;
-    color: #f9f9f9;
+    background: var(--secondary-color);
+    color: var(--text-color);
     text-align: center;
     padding: 20px; 
     margin-top: auto;
 }
 
 .card {
-    background-color: #333333;
-    color: #f9f9f9;
+    background-color: var(--card-color);
     border-radius: 10px;
     padding: 20px;              
     margin-top: 2%;
@@ -124,31 +160,4 @@ hr{
     margin-right: 2%;
     margin-bottom: 2%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 
-}
-
-.light-theme {
-    background-color: #f9f9f9;
-    color: white;
-}
-
-.light-theme .card{
-    background-color: #dadada;
-    color: #333333;
-}
-
-.light-theme .info{
-    color: #333333;
-}
-
-.light-theme .subjects{
-    color: #333333;
-}
-
-
-.purple-theme{
-    background-color: #6a1b9a;
-    color: #f9f9f9;
-}
-.purple-theme .card{
-    background-color: #9c27b0;
 }
