--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -11,7 +11,8 @@
     --secondary-color: #87ceeb;
     --text-color: #333333;
     --card-color: #ffffff;
-    --hover-color: #add8e6;;
+    --hover-color: #add8e6;
+    ;
   }
   
   .purple-theme {
@@ -22,54 +23,55 @@
     --hover-color: #6a1b9a;
   }
   
-  .armour-theme{
+  .armour-theme {
     --primary-color: #5ac3b0;
     --secondary-color: #f7cd46;
     --text-color: #de5935;
     --card-color: white;
     --hover-color: #de5935;
   }
-
+  
   .simpatico-theme {
     --primary-color: #1a2238;
     --secondary-color: #ff6a3d;
     --text-color: #e4e4e4;
-    --hover-color:#9daaf2;
+    --hover-color: #9daaf2;
   }
-
-header{
+  
+  header {
     background: var(--primary-color);
     background-size: auto;
     color: var(--text-color);
     text-align: center;
     padding: 20px;
-}
-
-body{
+  }
+  
+  body {
     background-color: var(--primary-color);
     margin: auto;
-}
-
-.navbar{
+  }
+  
+  .navbar {
     overflow: hidden;
     background-color: var(--secondary-color);
     font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar a{
+  }
+  
+  .navbar a {
     float: left;
     font-size: 16px;
     color: var(--text-color);
-    text-align: center; 
+    text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-}
-
-.dropdown{
+  }
+  
+  .dropdown {
     float: left;
     overflow: hidden;
-}
-.dropdown .dropbtn{
+  }
+  
+  .dropdown .dropbtn {
     cursor: pointer;
     font-size: 16px;
     border: none;
@@ -78,33 +80,36 @@ body{
     background-color: inherit;
     font-family: inherit;
     margin: 0;
-}
-.navbar a:hover, .dropdown:hover .dropbtn{
+  }
+  
+  .navbar a:hover,
+  .dropdown:hover .dropbtn {
     background-color: var(--hover-color);
-}
-.dropcontent{
+  }
+  
+  .dropcontent {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0,.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0, .2);
     z-index: 1;
-}
-
-.dropcontent a{
+  }
+  
+  .dropcontent a {
     float: none;
     color: var(--secondary-color);
     padding: 12px 16px;
     text-decoration: underline;
     display: block;
     text-align: center;
-}
-
-.dropdown:hover .dropcontent{
+  }
+  
+  .dropdown:hover .dropcontent {
     display: block;
-}
-
-#theme-switch{
+  }
+  
+  #theme-switch {
     float: right;
     cursor: pointer;
     font-size: 16px;
@@ -114,49 +119,49 @@ body{
     background-color: inherit;
     font-family: inherit;
     margin: 0;
-}
-
-#theme-switch:hover{
+  }
+  
+  #theme-switch:hover {
     background-color: var(--hover-color);
-}
-
-hr{
+  }
+  
+  hr {
     color: #ddd;
-}
-
-.subjects{
+  }
+  
+  .subjects {
     color: var(--text-color);
     width: 92%;
     text-decoration: underline;
     margin: auto;
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-.info{
+  }
+  
+  .info {
     color: var(--text-color);
     width: 90%;
     margin-top: 6px;
     margin-left: 28px;
     font-family: Arial, Helvetica, sans-serif;
     text-indent: 0.3in;
-}
-
-#footer{
+  }
+  
+  #footer {
     background: var(--secondary-color);
     color: var(--text-color);
     text-align: center;
-    padding: 20px; 
+    padding: 20px;
     margin-top: auto;
-}
-
-.card {
+  }
+  
+  .card {
     background-color: var(--card-color);
     border-radius: 10px;
-    padding: 20px;              
+    padding: 20px;
     margin-top: 2%;
     margin-left: 2%;
     margin-right: 2%;
     margin-bottom: 2%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 
-}
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
