--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -11,6 +11,13 @@ html, body, #root {
   --card-color: #333;
   --hover-color: #04263e;
   }
+  .default-theme {
+	--primary-color: #0a3d62;
+	--secondary-color: #416fa5;
+	--text-color: #f9f9f9;
+	--card-color: #333;
+	--hover-color: #04263e;  
+  }
   .light-theme {
     --primary-color: #787878;
     --secondary-color: #87ceeb;
