--- a/my-portfolio/src/styles/InspiroBot.module.css
+++ b/my-portfolio/src/styles/InspiroBot.module.css
@@ -18,5 +18,14 @@
 
 .generateButton {
   margin-top: 10px;
-
+  padding: 14px 40px;
+  border: 8px solid var(--primary-color);
+  background-color: var(--secondary-color);
+  color: var(--text-color);
+  width: 200px;
 }
+
+.generateButton:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
+}
+
