--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -4,13 +4,18 @@
 	margin-bottom: 0;
 	display: flex;
 	justify-content: space-between;
+  padding: 0 1rem;
+}
+
+.linkContainer{
+  display: flex;
 }
 
 .link {
   float: left;
   color: var(--text-color);
   text-align: center;
-  padding: 14px 16px;
+  padding: 16px 16px;
   text-decoration: none;
 }
 
