--- a/src/styles/Themeswitch.module.css
+++ b/src/styles/Themeswitch.module.css
@@ -4,8 +4,8 @@
 }
 
 .dropbtn {
-  background-color: var(--secondary-color); /* Button color */
-  color: var(--text-color); /* text color */
+  background-color: var(--secondary-color);
+  color: var(--text-color);
   padding: 16px;
   border: none;
   cursor: pointer;
@@ -22,7 +22,7 @@
 }
 
 .dropdownContent button {
-  color: var(--text-color); /* text color */
+  color: var(--text-color);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -34,7 +34,7 @@
 }
 
 .dropdownContent button:hover {
-  background-color: var(--hover-color); /* Use CSS variable for hover background */
+  background-color: var(--hover-color);
 }
 
 .themeSwitch:hover .dropdownContent {
