Tweaked Layout, added Icons

--- a/src/styles/ContentCard.module.css
+++ b/src/styles/ContentCard.module.css
@@ -21,3 +21,18 @@
 .indent {
   padding-left: 20px;
 }
+
+.headerWithImage, .header, .headerCentered {
+  display: flex;
+  align-items: center;
+}
+
+.headerCentered {
+  justify-content: center;
+}
+
+.cardImage {
+  width: 50px;
+  height: 50px;
+  order: 2;
+}
