--- a/src/styles/InspiroBot.module.css
+++ b/src/styles/InspiroBot.module.css
@@ -5,7 +5,7 @@
 .imageContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: left;
   overflow: hidden;
   margin: 20px 0;
 }
