--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -10,3 +10,11 @@
     padding-bottom: 20px;
     flex-grow: 1;
   }
+
+a {
+    color: var(--text-color);
+  }
+  
+a:hover, a:active, a:visited {
+      color: var(--text-color) ;
+  }
