--- a/src/styles/ContentCard.module.css
+++ b/src/styles/ContentCard.module.css
@@ -1,21 +1,26 @@
 .card {
 	background-color: var(--card-color);
-    border-radius: 10px;
-    padding: 20px;
-    margin-top: 2%;
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-bottom: 2%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 30px;
+  margin: 2%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 .cardTitle {
   color: var(--text-color);
+  font-size: xx-large;
+  font-weight: bold;
+  margin-bottom: 5px;
+  padding-left: 15px;
 }
 
 .cardContent {
   color: var(--text-color);
-  font-size: medium;
+  font-size: large;
+  line-height: 1.6;
+  text-align: justify;
+  padding: 0 1em;
 }
 
 .indent {
@@ -35,4 +40,11 @@
   width: 50px;
   height: 50px;
   order: 2;
+  margin-right: 10px;
+}
+
+.textContent {
+  flex-grow: 1;
+  text-align: justify;
+  padding: 0 1em;
 }
